<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.management.subscription.home.HomeFragment"
        android:label="@string/tab_home" />

    <fragment
        android:id="@+id/calendarFragment"
        android:name="com.management.subscription.calendar.CalendarFragment"
        android:label="@string/tab_calendar" />

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.management.subscription.settings.SettingsFragment"
        android:label="@string/tab_settings" />

    <fragment
        android:id="@+id/subscriptionEditorFragment"
        android:name="com.management.subscription.editor.SubscriptionEditorFragment"
        android:label="@string/editor_title_add">
        <argument
            android:name="subscriptionId"
            app:argType="string"
            android:defaultValue="@null"
            app:nullable="true" />
    </fragment>

    <fragment
        android:id="@+id/subscriptionDiscoveryFragment"
        android:name="com.management.subscription.editor.SubscriptionDiscoveryFragment"
        android:label="&#xC790;&#xB3D9; &#xCC3E;&#xAE30;" />

    <fragment
        android:id="@+id/subscriptionCycleListFragment"
        android:name="com.management.subscription.subscriptionlist.SubscriptionCycleListFragment"
        android:label="@string/subscription_list_title_monthly">
        <argument
            android:name="billingCycle"
            app:argType="string"
            android:defaultValue="MONTHLY" />
    </fragment>

</navigation>
